    Special:AllPages when there are no items available for display.
  * Recent changes will not always have a topic_version_id, so remove the
    dependency on that field when migrating to a new database.
  * Use a cache-buster request parameter with the jamwiki.js file to ensure
    that browsers do not use out-of-date Javascript.  Reported by shar.

Translation Updates:

  * Updated Danish translations.
  * Updated French translations.
  * Updated German translations (axelclk).
  * Updated Japanese translations.
  * Updated Russian translations (shar).
  * Updated Spanish translations.


1.0.5
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix an issue that broke the TOC for some browsers when using non-Latin
    characters.  Reported by by Felipe Avilis.
  * Fix an issue where parsing multiple pages at the same time could generate
    parser errors due to shared resource conflicts.

Translation Updates:

  * None.


1.0.4
=====

New Features:

  * None.

Bugfixes:

  * Fix a template parser issue when parsing content of the form
    "{{{{PAGENAME}}/info}}".  Reported by Felipe Avilis.
  * PDFs and other non-image files in the "Image:" namespace were not appearing
    on Special:AllPages.  Reported by Felipe Avilis.

Translation Updates:

  * Updated Polish translations (dlpa).


1.0.3
=====

New Features:

  * None.

Bugfixes:

  * Fix an XSS vulnerability with the search results page (Maxim Valyanskiy).
  * Fix an XSS vulnerability with the user contributions page (Maxim
    Valyanskiy).

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).


1.0.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix MS SQL errors on the Special:ImageList and similar pages.  Fix provided
    by Scott Barlow and Filip Rysavy.

Translation Updates:

  * Updated German translations (axelclk).


1.0.1
=====

Bugfixes:
